# rumpus_cli

./: Cargo.toml  README.md  default.toml
src/: cli.rs  intensity.rs  lib.rs  main.rs  simulate.rs
